[gd_scene load_steps=10 format=3 uid="uid://dyxhl6xncr3te"]

[ext_resource type="Script" path="res://shopMenu/shop_menu.gd" id="1_0snco"]
[ext_resource type="FontFile" uid="uid://djhci0wtk3red" path="res://Airport_Cyr.ttf" id="1_0xcwm"]
[ext_resource type="Texture2D" uid="uid://bguqqhacgmfcf" path="res://Спрайти/Invetory/heal.png" id="2_it6y4"]
[ext_resource type="Texture2D" uid="uid://c12k8uaqjnkcm" path="res://Спрайти/character stats/coin(money).png" id="3_n5kfc"]
[ext_resource type="Texture2D" uid="uid://bpb8iogp21cq1" path="res://Спрайти/shop/arrow_left.png" id="4_m5eej"]
[ext_resource type="Texture2D" uid="uid://dq4cqklo58uft" path="res://Спрайти/shop/arrow_right.png" id="5_b10ys"]
[ext_resource type="Texture2D" uid="uid://ywucayid38wt" path="res://Спрайти/character stats/coins.png" id="6_1d15b"]
[ext_resource type="Texture2D" uid="uid://c5eibrnyh7w7x" path="res://Спрайти/cross.png" id="8_0fo3e"]
[ext_resource type="AudioStream" uid="uid://dswkvau1qg8gr" path="res://Overall sounds/boom.mp3" id="8_imjxi"]

[node name="shopMenu" type="CanvasLayer"]
script = ExtResource("1_0snco")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0xcwm")
theme_override_font_sizes/font_size = 25
text = "Welckommen zu \"S.H.O.P\""

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("2_it6y4")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0xcwm")
theme_override_font_sizes/font_size = 20
text = "Apple"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_n5kfc")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0xcwm")
theme_override_font_sizes/font_size = 25
text = "15 per apple"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="amount" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_0xcwm")
theme_override_font_sizes/font_size = 40
text = "...0..."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="button_left_arrow" type="Sprite2D" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
position = Vector2(25.5, 13)
scale = Vector2(2.25, 1.65)
texture = ExtResource("4_m5eej")

[node name="button_left" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="button_right_arrow" type="Sprite2D" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
position = Vector2(93, 13)
scale = Vector2(2.25, 1.65)
texture = ExtResource("5_b10ys")

[node name="button_right" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="buy button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0xcwm")
theme_override_font_sizes/font_size = 20
text = "Buy"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 20)
offset_left = 699.0
offset_top = 252.0
offset_right = 824.0
offset_bottom = 282.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("6_1d15b")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="cost" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0xcwm")
theme_override_font_sizes/font_size = 15
text = "0 coins
"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -84.0
offset_right = -219.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.642166, 0.642166)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("8_0fo3e")

[node name="close_shop" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 317.0
offset_top = 240.0
offset_right = 342.0
offset_bottom = 265.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Sus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_imjxi")
volume_db = -15.0

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/button_left" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/button_right" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/buy button" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="close_shop" to="." method="_on_close_shop_pressed"]
